<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="button_header">My Nanodegree Apps!</string>

    // button labels
    <string name="spotify">This button will launch Spotify Streamer</string>
    <string name="scores">This button will launch Scores App</string>
    <string name="library">This button will launch Library App</string>
    <string name="build">This button will launch Build It Bigger</string>
    <string name="xyz">This button will launch XYZ Reader</string>
    <string name="capstone">This button will launch my Capstone App</string>

    <string name="action_settings">Settings</string>
</resources>
