<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/portfolio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/button_header"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="#ffffffff">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:id="@+id/spotifyButton"
            android:backgroundTint="#F08C35"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:onClick="onClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:id="@+id/scoresButton"
            android:backgroundTint="#F08C35"
            android:layout_below="@+id/spotifyButton"
            android:layout_centerHorizontal="true"
            android:onClick="onClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:id="@+id/libraryButton"
            android:backgroundTint="#F08C35"
            android:layout_below="@+id/scoresButton"
            android:layout_centerHorizontal="true"
            android:onClick="onClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build"
            android:id="@+id/buildButton"
            android:backgroundTint="#F08C35"
            android:layout_below="@+id/LibraryButton"
            android:layout_centerHorizontal="true"
            android:onClick="onClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz"
            android:id="@+id/xyzButton"
            android:backgroundTint="#F08C35"
            android:layout_below="@+id/buildButton"
            android:layout_alignLeft="@+id/buildButton"
            android:layout_alignStart="@+id/buildButton"
            android:onClick="onClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/capstoneButton"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            android:layout_below="@+id/xyzButton"
            android:layout_alignLeft="@+id/xyzButton"
            android:layout_alignStart="@+id/xyzButton"
            android:onClick="onClick" />
    </LinearLayout>

</RelativeLayout>
